@@ -497,11 +497,11 @@ void shortcut_init(bool unjustify)
 
     sc_init_one(&main_list, NANO_FORWARD_KEY, N_("Forward"),
 	IFHELP(nano_forward_msg, NANO_NO_KEY), NANO_NO_KEY,
-	NANO_NO_KEY, VIEW, do_right_void);
+	NANO_NO_KEY, VIEW, do_right);
 
     sc_init_one(&main_list, NANO_BACK_KEY, N_("Back"),
 	IFHELP(nano_back_msg, NANO_NO_KEY), NANO_NO_KEY,
-	NANO_NO_KEY, VIEW, do_left_void);
+	NANO_NO_KEY, VIEW, do_left);
 
     sc_init_one(&main_list, NANO_HOME_KEY, N_("Home"),
 	IFHELP(nano_home_msg, NANO_NO_KEY), NANO_NO_KEY,
